nixrs-derive-tests/tests/ui/deserialize_from_store_dir_str_missing.stderr
error[E0277]: the trait bound `Test: FromStoreDirStr` is not satisfied
 --> tests/ui/deserialize_from_store_dir_str_missing.rs
  |
  | #[nix(from_store_dir_str)]
  |       ^^^^^^^^^^^^^^^^^^ the trait `FromStoreDirStr` is not implemented for `Test`
  |
  = help: the following other types implement trait `FromStoreDirStr`:
            DerivedPath
            LegacyDerivedPath
            StorePath
